2006-02-03 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc2
	* info/patches/PRE_2_6/patch-2.6.16-rc2: added

2006-02-03 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc1-mm5
	* info/patches/mm_patches/2.6.16-rc1-mm5: added

2006-02-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to grsecurity-2.1.8-2.4.32-200601211647.patch
	* info/patches/grsecurity_2_4/grsecurity-2.1.8-2.4.32-200601211647.patch: added

2006-02-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to grsecurity-2.1.8-2.6.14.6-200601211647.patch
	* info/patches/grsecurity_2_6/grsecurity-2.1.8-2.6.14.6-200601211647.patch: added

2006-01-31 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-cks3
	* info/patches/ck_server_patches/patch-2.6.15-cks3: added

2006-01-31 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-ck3
	* info/patches/ck_patches/patch-2.6.15-ck3: added

2006-01-30 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15.2
	* info/patches/maintenance_patches/patch-2.6.15.2: added

2006-01-29 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc1-mm4
	* info/patches/mm_patches/2.6.16-rc1-mm4: added

2006-01-29 David Brown <dmlb2000@gmail.com>
	* info/patches/squashfs_patches/squashfs2.2-patch: fixed source url
	  and added gpg signature from the mirror

2006-01-24 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc1-mm3
	* info/patches/mm_patches/2.6.16-rc1-mm3: added

2006-01-23 David Brown <dmlb2000@gmail.com>
	* info/patches/sws2_patches/suspend2-2.2-for-2.6.15.1.patch: added

2006-01-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc1-mm2
	* info/patches/mm_patches/2.6.16-rc1-mm2: added

2006-01-18 David Brown <dmlb2000@gmail.com>