@@ -1,3 +1,6 @@
+2006-02-06 David Brown <dmlb2000@gmail.com>
+	* info/patches/reiser4_patches/reiser4-for-2.6.15-1.patch: added
+
 2006-02-03 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.16-rc2
 	* info/patches/PRE_2_6/patch-2.6.16-rc2: added
